--- a/A_dbms/static/dbms/css/agree-style.css
+++ b/A_dbms/static/dbms/css/agree-style.css
@@ -20,7 +20,7 @@ body {
     /*行间距*/
     line-height: 21pt;
     /*背景图片*/
-    background-image: url("../images/agree_dark_line.png");
+    background-image: url("../images/bjj.png");
     background-repeat: repeat-y;
 }
 
