--- a/templates/test.html
+++ b/templates/test.html
@@ -22,6 +22,36 @@ header, footer {
 
 <header>页眉</header>
 
+
+<table>
+    <tr>
+        <th width="200pt">股东姓名（名称）</th>
+        <th>签字（盖章）</th>
+        <th>联系方式</th>
+    </tr>
+    <tr style="height: 100pt">
+        <td align="center">sdfdsf</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+
+
+</table>
 <p>内容</p>
 
 <footer>页脚</footer>
