--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-m-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-m-z.html
@@ -14,9 +14,7 @@
         <div>{% include 'dbms/agree/agree_board/counter/_c/3-period-1-3.html' %}</div>
         <p><strong>五、乙方承诺</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/4-promise-y-1-3.html' %}</div>
-        <p><strong>六、若乙方非主合同当事人，乙方承诺：在任何情况下发生本项质押无效或处置质押物所得价
-            款不能全部清偿本项质押所担保的债权时，乙方继续以信用向甲方提供连带责任反担保，担保范围和
-            期限与本质押反担保约定的担保范围和期限一致，保证期间自甲方履行代偿之日起两年止。</strong></p>
+        <p><strong>六、若乙方非主合同当事人，乙方承诺：在任何情况下发生本项质押无效或处置质押物所得价款不能全部清偿本项质押所担保的债权时，乙方继续以信用向甲方提供连带责任反担保，担保范围和期限与本质押反担保约定的担保范围和期限一致，保证期间自甲方履行代偿之日起两年止。</strong></p>
         <p><strong>七、权利凭证的移交和保管</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/z/5-transfer-1-2.html' %}</div>
         <p><strong>八、质权的实现</strong></p>
@@ -49,7 +47,7 @@
         {% elif counter_warrant_typ == 21 %}
             {% include 'dbms/agree/agree_board/counter/d/d-appendix-1.html' %}
         {% elif counter_warrant_typ == 31 %}
-            {% include 'dbms/agree/agree_board/counter/z/d-appendix-draft.html' %}
+            {% include 'dbms/agree/agree_board/counter/z/z-appendix-draft.html' %}
         {% else %}
             <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
             <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
