--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/max/13-d-realize-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/max/13-d-realize-1.html
@@ -1,23 +1,11 @@
-<p>1、发生下列事项之一时，甲方有权行使抵押权，可以与乙方协议以抵押财产折价，或者以
-    拍卖、变卖抵押财产的价款优先受偿，或者有权申请法院依法强制执行抵押财产，所得价
-    款不足以清偿本合同项下所担保的债权的，甲方可以选择将该款项用于归还本金、利息、罚
-    息、复利或者费用等：</p>
-<p>（1）主债权合同项下债务履行期限届满，贷款方未受清偿，而要求甲方履行代偿义务
-    的。“期限届满”包括主债权合同项下债务履行期限届满，以及借款方依照国家法律法
-    规规定或者主债权合同的约定宣布主债权合同项下债权提前到期的情形；</p>
-<p>（2）乙方、丙方违反主债权合同、保证合同及本抵押合同项下约定，致使贷款方要求甲
-    方履行代偿义务的；</p>
-<p>（3）乙方、丙方被撤销、吊销营业执照、责令关闭或者出现其他解散事由，卷入或即将
-    卷入重大的诉讼程序、发生其他足以影响其偿债能力或缺乏偿债诚意的行为等情况；</p>
+<p>1、发生下列事项之一时，甲方有权行使抵押权，可以与乙方协议以抵押财产折价，或者以拍卖、变卖抵押财产的价款优先受偿，或者有权申请法院依法强制执行抵押财产，所得价款不足以清偿本合同项下所担保的债权的，甲方可以选择将该款项用于归还本金、利息、罚息、复利或者费用等：</p>
+<p>（1）主债权合同项下债务履行期限届满，贷款方未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主债权合同项下债务履行期限届满，以及借款方依照国家法律法规规定或者主债权合同的约定宣布主债权合同项下债权提前到期的情形；</p>
+<p>（2）乙方、丙方违反主债权合同、保证合同及本抵押合同项下约定，致使贷款方要求甲方履行代偿义务的；</p>
+<p>（3）乙方、丙方被撤销、吊销营业执照、责令关闭或者出现其他解散事由，卷入或即将卷入重大的诉讼程序、发生其他足以影响其偿债能力或缺乏偿债诚意的行为等情况；</p>
 <p>（4）乙方、丙方被人民法院受理破产申请或者裁定和解；</p>
 <p>（5）乙方、丙方死亡、被宣告失踪或者被宣告死亡；</p>
-<p>（6）抵押财产被申请撤销、申请宣告无效、异议、诉讼、仲裁、查封、冻结、监管或者
-    被采取其他强制措施；</p>
+<p>（6）抵押财产被申请撤销、申请宣告无效、异议、诉讼、仲裁、查封、冻结、监管或者被采取其他强制措施；</p>
 <p>（7）乙方未按甲方要求提供相应的担保；</p>
 <p>（8）乙方、丙方违反本合同项下义务；</p>
 <p>（9）其他严重影响抵押权实现的情形。</p>
-<p>2、本合同所担保的债权同时存在物的反担保（含债务人或第三人提供）和保证反担保
-    的，甲方可以就物的反担保实现债权，也可以要求保证人承担保证责任。本合同所担
-    保的债权同时存在两个以上物的反担保人的（含债务人提供物的担保），甲方有权就
-    其中任一或者各个担保物行使担保物权。甲方已经选择某一担保方式或担保物来实现
-    债权的，也可同时主张通过其他担保方式或担保物来实现全部或部分债权。</p>
+<p>2、本合同所担保的债权同时存在物的反担保（含债务人或第三人提供）和保证反担保的，甲方可以就物的反担保实现债权，也可以要求保证人承担保证责任。本合同所担保的债权同时存在两个以上物的反担保人的（含债务人提供物的担保），甲方有权就其中任一或者各个担保物行使担保物权。甲方已经选择某一担保方式或担保物来实现债权的，也可同时主张通过其他担保方式或担保物来实现全部或部分债权。</p>
