--- a/A_dbms/templates/dbms/agree/agree_board/date-period.html
+++ b/A_dbms/templates/dbms/agree/agree_board/date-period.html
@@ -1,1 +1,1 @@
-<u>&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp</u>月<u>&nbsp&nbsp</u>日
+<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日
