--- a/A_dbms/templates/dbms/agree/agree_board/sign-date.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-date.html
@@ -1,1 +1,1 @@
-<p class="sign-date">&nbsp&nbsp&nbsp年&nbsp&nbsp月&nbsp&nbsp日</p>
+<p class="sign-date">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp年&nbsp&nbsp&nbsp&nbsp月&nbsp&nbsp&nbsp&nbsp日</p>
