--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/24-other.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/24-other.html
@@ -1,10 +1,7 @@
 <p>1、本合同未尽事宜，甲、乙、丙三方可另行达成书面协议，作为本合同附件。</p>
 <p>2、本合同的任何附件、修改或补充均构成本合同不可分割的一部分，与本合同具有同等的法律效力。</p>
-<p>3、本合同独立于主合同、主债权合同和其他关联合同，主合同、主债权合同和其他关联合同的无效
-    并不导致本合同无效，乙方仍需对丙方的赔偿责任或返还责任承担担保。关联合同中有关本反担保
-    的内容与本合同约定相冲突的，以本合同约定为准。</p>
-<p><strong>声明：乙丙双方已阅读本合同所有条款。应乙丙双方要求，甲方已经就本合同作了相应的说
-    明。乙丙双方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</strong></p>
+<p>3、本合同独立于主合同、主债权合同和其他关联合同，主合同、主债权合同和其他关联合同的无效并不导致本合同无效，乙方仍需对丙方的赔偿责任或返还责任承担担保。关联合同中有关本反担保的内容与本合同约定相冲突的，以本合同约定为准。</p>
+<p><strong>声明：乙丙双方已阅读本合同所有条款。应乙丙双方要求，甲方已经就本合同作了相应的说明。乙丙双方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</strong></p>
 <table style="margin-top: 15pt">
     <tr style="height: 30pt">
         <td style="border: none" width="50%"><strong>乙方确认签章：</strong></td>
