--- a/A_dbms/templates/dbms/agree/agree_board/counter/_m/8-d-credit-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_m/8-d-credit-1.html
@@ -9,8 +9,7 @@
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
 {% elif counter_typ in X_COUNTER_TYP_LIST %}
     <p>出现以下情形之一的，甲方的债权确定：</p>
-    <p>1、发生甲方依据丙方与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）和
-        保证合同约定代为丙方清偿债务的情形；</p>
+    <p>1、发生甲方依据丙方与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）和保证合同约定代为丙方清偿债务的情形；</p>
     <p>2、抵押物被查封、扣押；</p>
     <p>3、乙方、丙方出现足以影响债务清偿的危机事件或被宣告破产、被撤销等；</p>
     <p>4、法律规定债权确定的其他情形。</p>
