--- a/A_dbms/templates/dbms/agree/agree_board/counter/g/max/g-0-m-pre.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/g/max/g-0-m-pre.html
@@ -1,12 +1,1 @@
-<p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>（以下简称委托人）与贵公司
-    于<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp&nbsp&nbsp</u>月
-    <u>&nbsp&nbsp&nbsp&nbsp</u>日签订了《最高额委托保证合同》（以下
-    称：“委托保证合同”，合同编号:<strong><u>{{ agree_obj.agree_num }}</u></strong>），合同
-    约定贵公司为委托人自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp&nbsp&nbsp</u>月
-    <u>&nbsp&nbsp&nbsp&nbsp</u>日至<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-    <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间，向
-    <strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额
-    为<strong><u>人民币{{ agree_amount_cn }}</u></strong>（具体金额以银行放款凭证为准）
-    的一系列债务（包括但不限于：人民币借款、银行承兑汇票、保函等）提供担保。本人愿意就贵公司基于为
-    委托人的上述债务担保所承担的保证责任而向贵公司提供相应的保证反担保。对此，本人无条件地不可撤销地
-    保证：</p>
+<p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>（以下简称委托人）与贵公司于{% include 'dbms/agree/agree_board/date-period.html' %}签订了《最高额委托保证合同》（以下称：“委托保证合同”，合同编号:<strong><u>{{ agree_obj.agree_num }}</u></strong>），合同约定贵公司为委托人自{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}期间，向<strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额为<strong><u>人民币{{ agree_amount_cn }}</u></strong>（具体金额以银行放款凭证为准）的一系列债务（包括但不限于：人民币借款、银行承兑汇票、保函等）提供担保。本人愿意就贵公司基于为委托人的上述债务担保所承担的保证责任而向贵公司提供相应的保证反担保。对此，本人无条件地不可撤销地保证：</p>
