--- a/A_dbms/templates/dbms/article/scan/tab/lending.html
+++ b/A_dbms/templates/dbms/article/scan/tab/lending.html
@@ -3,7 +3,7 @@
         <thead>
         <tr style="text-align: center">
             <th>发放次序</th>
-            <th>通知金额（元）</th>
+            <th>授信金额（元）</th>
             <th>放款金额（元）</th>
             <th>还款金额（元）</th>
         </tr>
