--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-edit.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-edit.html
@@ -24,11 +24,11 @@
         <div class="col-sm-9"> {{ form_custom_edit.contact_num }}</div>
         <label id="e_contact_num" class="pull-right">{{ form_custom_edit.contact_num.errors }}</label>
     </div>
-    <div class="form-group"><!--是否仅为反担保人-->
-        <label for="id_counter_only" class="col-sm-3 control-label">{{ form_custom_edit.counter_only.label }}：</label>
-        <div class="col-sm-9">{{ form_custom_edit.counter_only }}</div>
-        <label id="e_counter_only" class="pull-right">{{ form_custom_edit.counter_only.errors }}</label>
-    </div>
+{#    <div class="form-group"><!--是否仅为反担保人-->#}
+{#        <label for="id_counter_only" class="col-sm-3 control-label">{{ form_custom_edit.counter_only.label }}：</label>#}
+{#        <div class="col-sm-9">{{ form_custom_edit.counter_only }}</div>#}
+{#        <label id="e_counter_only" class="pull-right">{{ form_custom_edit.counter_only.errors }}</label>#}
+{#    </div>#}
 </div>
 
 
