--- a/A_dbms/templates/dbms/agree/agree_board/sign-approval-order.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-approval-order.html
@@ -8,7 +8,7 @@
     <td>贷款金额</td>
     <td align="center">{{ agree_amount_str }}万元</td>
     <td align="center">期限</td>
-    <td align="center">{{ agree_obj.agree_term }}个月</td>
+    <td align="center">{{ credit_term_cn }}</td>
 </tr>
 <tr>
     <td align="center" rowspan="{{ counter_count }}">合同</td>
