--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -5,8 +5,8 @@
             {% if PAGE_TITLE == '客户预览' %}
                 <a class="btn btn-primary btn-sm " id="addArticle">创建项目 </a>
                 {% if custom_obj.genre == 1 %}
-                    <a class="btn btn-primary btn-sm " id="addShareholderB">添加股东 </a>
-                    <a class="btn btn-primary btn-sm " id="addTrusteeB">添加董事 </a>
+                    <a class="btn btn-primary btn-sm " id="addShareholderB">添加股东/投资人 </a>
+                    <a class="btn btn-primary btn-sm " id="addTrusteeB">添加董事/理事 </a>
                 {% elif custom_obj.genre == 2 %}
                     <a class="btn btn-primary btn-sm " id="addSpouseB">添加配偶 </a>
                 {% endif %}
