--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -10,10 +10,10 @@
                    aria-controls="profile" role="tab" data-toggle="tab">工商信息</a></li>
             <li role="presentation">
                 <a href="#shareholder" style="background-color: #f5f5f5"
-                   aria-controls="profile" role="tab" data-toggle="tab">股东信息</a></li>
+                   aria-controls="profile" role="tab" data-toggle="tab">股东/投资人信息</a></li>
             <li role="presentation">
                 <a href="#trustee" style="background-color: #f5f5f5"
-                   aria-controls="profile" role="tab" data-toggle="tab">董事信息</a></li>
+                   aria-controls="profile" role="tab" data-toggle="tab">董事/理事信息</a></li>
         {% elif custom_obj.genre == 2 %}
             <li role="presentation">
                 <a href="#spouse" style="background-color: #f5f5f5"
