--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -6,6 +6,7 @@
     <title>{{ counter_obj.counter_num }}</title>
     <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style.css' %}">
     <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style.css' %}">
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 </head>
 <body>
 {% if agree_obj.agree_state == 11 or agree_obj.agree_state == 51 %}
