--- a/A_dbms/templates/dbms/agree/extra/js-counter-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-counter-add.html
@@ -70,6 +70,9 @@
                 case ('41'):{#其他权利质押#}
                     $('#form_counter_other').show();
                     break;
+                case ('59'):{#其他权利质押#}
+                    $('#form_counter_other').show();
+                    break;
                 default:
                     $('.extend').hide()
             }
