--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 {% if agree_obj.agree_state == 11 or agree_obj.agree_state == 51 %}
-{#{% if 1 %}#}
+    {#{% if 1 %}#}
     <div class="container-fluid" style="padding-left: 1px;">
         <input style="display: none" name="counter_id" id="id_counter_id" value={{ counter_obj.id }}>
     </div>
@@ -24,6 +24,8 @@
                 {% include 'dbms/agree/agree_board/counter/c-s-d.html' %}
             {% elif counter_typ in Z_COUNTER_TYP_LIST %}
                 {% include 'dbms/agree/agree_board/counter/c-s-z.html' %}
+            {% else %}
+                <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
         {% elif agree_typ == 2 %}
             {% if counter_typ == 1 %}
@@ -34,13 +36,15 @@
                 {% include 'dbms/agree/agree_board/counter/c-m-d.html' %}
             {% elif counter_typ in Z_COUNTER_TYP_LIST %}
                 {% include 'dbms/agree/agree_board/counter/c-m-z.html' %}
+            {% else %}
+                <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
         {% elif agree_typ == 3 %}
             <p>！！！！！！！agree_typ == 3还未添加合同模板，请联系系统管理员！！！！！！！</p>
         {% elif agree_typ == 7 %}
             <p>！！！！！！！agree_typ == 7还未添加合同模板，请联系系统管理员！！！！！！！</p>
         {% elif agree_typ == 41 %}
-             {% if counter_typ == 1 %}
+            {% if counter_typ == 1 %}
                 {% include 'dbms/agree/agree_board/counter/c-s-x-n.html' %}
             {% elif counter_typ == 2 %}
                 {% include 'dbms/agree/agree_board/counter/c-s-g-n.html' %}
@@ -48,6 +52,8 @@
                 {% include 'dbms/agree/agree_board/counter/c-s-d-n.html' %}
             {% elif counter_typ in Z_COUNTER_TYP_LIST %}
                 {% include 'dbms/agree/agree_board/counter/c-s-z-n.html' %}
+            {% else %}
+                <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
         {% elif agree_typ == 42 %}
             <p>！！！！！！！agree_typ == 42还未添加合同模板，请联系系统管理员！！！！！！！</p>
