--- a/A_dbms/templates/dbms/agree/scan/agree-tab.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-tab.html
@@ -6,13 +6,13 @@
                aria-controls="home" role="tab" data-toggle="tab"> 反担保合同 </a></li>
         <li role="presentation">
             <a href="#result" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab"> 决议声明 </a></li>
+               aria-controls="home" role="tab" data-toggle="tab"> 决议/声明 </a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="counters" class="tab-pane active" id="counters"> <!--反担保合同-->
             {% include 'dbms/agree/scan/tab/agree-counters.html' %} </div>
-        <div role="result" class="tab-pane" id="result"> <!--反担保合同-->
+        <div role="result" class="tab-pane" id="result"> <!--决议/声明-->
             {% include 'dbms/agree/scan/tab/agree-result.html' %} </div>
     </div>
 </div>
