--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
@@ -19,13 +19,13 @@
             var selected_sure_typ = $('#id_sure_typ').val();
             console.log(selected_sure_typ);
             $('.guarantee-extend').hide();
-            {#    SURE_TYP_LIST = (#}
+            {#     SURE_TYP_LIST = [#}
             {#(1, '企业保证'), (2, '个人保证'),#}
             {#(11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (14, '在建工程抵押'), (15, '车辆抵押'),#}
-            {#(21, '房产顺位'), (22, '土地顺位'), (23, '在建工程顺位'),(24, '动产顺位'),#}
+            {#(21, '房产顺位'), (22, '土地顺位'), (23, '在建工程顺位'), (24, '动产顺位'),#}
             {#(31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'), (39, '其他权利质押'),#}
             {#(42, '房产监管'), (43, '土地监管'), (44, '票据监管'), (47, '动产监管'), (49, '其他监管'),#}
-            {#(51, '股权预售'), (52, '房产预售'), (53, '土地预售'))#}
+            {#(51, '股权预售'), (52, '房产预售'), (53, '土地预售'), (59, '其他预售')]#}
             switch (selected_sure_typ) {
                 case ('1'):{#<--企业保证-->#}
                     $('#form_lendingcustoms_c_add').show();
@@ -94,6 +94,9 @@
                     $('#form_lendingother_add').show();
                     break;
                 case ('49'): {#<--其他监管-->#}
+                    $('#form_lendingother_add').show();
+                    break;
+                case ('59'): {#<--其他预售-->#}
                     $('#form_lendingother_add').show();
                     break;
                 default:
