--- a/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
+++ b/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
@@ -7,6 +7,7 @@
             <th>评审次序</th>
             <th>项目数量</th>
             <th>评审日期</th>
+            <th>主持人</th>
             <th>状态</th>
         </tr>
         </thead>
@@ -22,6 +23,7 @@
                 <td align="right">{{ meeting.review_order }}</td>
                 <td align="right">{{ meeting.article.all.count }}</td>
                 <td>{{ meeting.review_date }}</td>
+                <td>{{ meeting.compere.name }}</td>
                 <td>{{ meeting.get_meeting_state_display }}</td>
             </tr>
         {% endfor %}
