--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
@@ -15,7 +15,7 @@
         <tr>
             <td style="width: 10%">甲乙双方就用于质押登记的应收账款描述（见右）</td>
             <td colspan="3">
-                <p>1、甲乙双方约定从{% include 'dbms/agree/agree_board/date-period.html' %}起至甲方的追偿权诉讼时效届满之后两年止，乙方将其在生产经营中取得的包括但不限于下表的全部应收账款质押给甲方，为甲方提供质押反担保，质押权金额为人民币<strong><u>{{ agree_amount_cn }}</u></strong></p>
+                <p>1、甲乙双方约定从{% include 'dbms/agree/agree_board/date-period.html' %}起至甲方的追偿权诉讼时效届满之后两年止，乙方将其在生产经营中取得的包括但不限于下表的全部应收账款质押给甲方，为甲方提供质押反担保，质押权金额为人民币<strong><u>{{ agree_amount_cn }}。</u></strong></p>
                 <p>2、应收账款质押明细表（包含但不限于下表所列的全部应收账款）</p>
                 <table cellspacing="0" cellpadding="0">
                     <tr>
