--- a/A_dbms/templates/dbms/agree/preview-sign.html
+++ b/A_dbms/templates/dbms/agree/preview-sign.html
@@ -15,7 +15,7 @@
             <table>
                 {% include 'dbms/agree/agree_board/sign-approval-order.html' %}
                 <tr>
-                    <td colspan="6">法务专员意见：<br><br><br>
+                    <td colspan="6">合同专员意见：<br><br><br>
                         <span style="padding-left: 400pt">签名：</span><br><br>
                         <span style="padding-left: 400pt">时间：</span>
                     </td>
