--- a/A_dbms/templates/dbms/agree/agree_board/counter/_m/2-creditor-rights-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_m/2-creditor-rights-1.html
@@ -3,6 +3,8 @@
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>
 </p>
 <p>2、在上述期间内的任一时点，只要甲方对丙方的担保不超过最高限额，甲方可以连续、循环地为丙方提供保证担保，不论次数和金额，乙方对甲方实际承担的担保责任均承担{% if counter_obj.counter_typ in MORTGAGE_COUNTER_TYP_LIST %}抵押{% elif counter_obj.counter_typ == 1 or counter_obj.counter_typ == 2 %}连带反担保{% endif %}责任。
