--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/3-period-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/3-period-1-3.html
@@ -14,6 +14,8 @@
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
 {% endif %}
 
 
