--- a/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
@@ -8,8 +8,9 @@
             <th>签订人</th>
 {#            <th>签订情况</th>#}
             {% if PAGE_TITLE == '风控落实' %}
-                <th>签订日期</th>
+                <th>日期</th>
                 <th>签订情况</th>
+                <th>备注</th>
             {% endif %}
             {% if PAGE_TITLE == '合同详情' or PAGE_TITLE == '风控落实' %}
                 <th>操作</th>
@@ -83,6 +84,7 @@
                         <a class="btn btn-primary btn-xs delCounterB">删除</a></td>
                 {% elif PAGE_TITLE == '风控落实' %}
                     <td>{{ counter.counter_sign_date|default_if_none:'' }}</td>
+                    <td>{{ counter.get_counter_state_display|default_if_none:'' }}</td>
                     <td>{{ counter.counter_remark|default_if_none:'' }}</td>
                     <td><a class="btn btn-primary btn-xs counterSignB">签订</a></td>
                 {% endif %}
