--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/1-scope-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/1-scope-1.html
@@ -11,8 +11,9 @@
     <p>3、甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、翻译费、评估拍卖费等）。</p>
     <p>本合同第一条与本条有冲突时以本条约定为准。</p>
 {% elif agree_typ == 7 or agree_typ == 47 %}
-    <p>？？？？？？？？？？？？？？？？？？？</p>
-    <p>？？？？？？？？？？？？？？？？？？？</p>
-    <p>？？？？？？？？？？？？？？？？？？？</p>
-    <p>？？？？？？？？？？？？？？？？？？？</p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
 {% endif %}
