--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-notice.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-notice.html
@@ -12,7 +12,7 @@
             <th>放款金额</th>
             <th>还款金额</th>
             <th>备注</th>
-            <th>操作人员</th>
+            <th>创建人</th>
             {% if PAGE_TITLE == '风控落实' %}
                 <th>操作</th>
             {% endif %}
