--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
@@ -35,7 +35,7 @@
         <td style="border: none">
             {% if counter_typ in X_COUNTER_TYP_LIST %}
                 {% for custom in counter_obj.assure_counter.custome.all %}
-                    <strong><u>{{ custom.name }}</u></strong>
+                    <strong><u>{{ custom.name }}{% if custom.person_custome.spouses %}、{{ custom.person_custome.spouses.name }}{% endif %}</u></strong>
                 {% endfor %}
             {% else %}
                 <!--WARRANT_TYP_LIST = [
