--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
@@ -10,6 +10,11 @@
         <p>住所（地址）：{{ custom.company_custome.registered_addr }}</p>
         <p>法定代表人：{{ custom.company_custome.representative }}</p>
     {% endfor %}
+{#            (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))#}
+{% elif counter_typ == 2 %}
+    {% for custom in counter_obj.assure_counter.custome.all %}
+        <p><strong>反担保保证人（乙方）：{{ custom.name }}{% if custom.person_custome.spouses %}、{{ custom.person_custome.spouses.name }}{% endif %}</strong></p>
+    {% endfor %}
     {#MORTGAGE_COUNTER_TYP_LIST = [11, 12, 13, 14, 15, ]#}
 {% else %}
     <!--WARRANT_TYP_LIST = [
