--- a/A_dbms/templates/dbms/report/summary/balance.html
+++ b/A_dbms/templates/dbms/report/summary/balance.html
@@ -10,3 +10,18 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_article_class' class_typ=21 %}">
             在保项目分类（按项目）</a></label>
 </div>
+<div class="panel-heading"><label>发生额类报表</label></div>
+<div class="panel-body row" style="padding: 1px;">
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="#">
+            项目明细表</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="#">
+            项目分类统计表（按放款）</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="#">
+            项目分类统计表（按项目）</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="#">
+            追偿项目回款统计表</a></label>
+</div>
