--- a/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
@@ -14,7 +14,7 @@
 {% elif counter_warrant_typ == 11 %}
     <p>经丙方要求，乙方同意以其享有的应收账款为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% elif counter_warrant_typ == 21 %}
-    <p>乙方同意以其享有所有权的在<strong><u>{{ stock_obj.target }}</u></strong>的<strong><u>{{ stock_obj.ratio }}%</u></strong>股权（对应应缴注册资本人民币<strong><u>{{ stock_registe_str }}</u></strong>万元整，实缴出资人民币<strong><u>{{ stock_share_str }}</u></strong>万元整,大写：<strong><u>{{ agree_share_cn }}</u></strong>）为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保, 乙方向甲方提供的质押反担保的被担保债权金额为人民币壹仟壹佰万元整，担保期限为：______年___月___日至______年___月___日。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
+    <p>乙方同意以其享有所有权的在<strong><u>{{ counter_stock_obj.target }}</u></strong>的<strong><u>{{ counter_stock_obj.ratio }}%</u></strong>股权（对应应缴注册资本人民币<strong><u>{{ stock_registe_str }}</u></strong>万元整，实缴出资人民币<strong><u>{{ stock_share_str }}</u></strong>万元整，大写：<strong><u>{{ agree_share_cn }}</u></strong>）为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保, 乙方向甲方提供的质押反担保的被担保债权金额为人民币<strong><u>{{ agree_amount_cn }}</u></strong>，担保期限为：______年___月___日至______年___月___日。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% elif counter_warrant_typ == 31 %}
     <p>经丙方要求，乙方同意以其合法持有的票面总额不低于<strong><u>{{ denomination_str }}万元</u></strong>（人民币大写金额：<strong><u>{{ denomination_cn }}</u></strong>）的{{  counter_draft_obj.get_typ_display }}以背书“质押”方式出质给被背书人甲方为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保, 乙方向甲方提供的质押反担保的被担保主债权金额为<strong><u>{{ agree_amount_cn }}</u></strong>，担保期限为：______年___月___日至______年___月___日。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% elif counter_warrant_typ == 55 %}
