--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -16,6 +16,7 @@
                 <th>在保余额</th>
             {% endif %}
             {#            <th>纪要编号</th>#}
+            <th>创建日期</th>
             <th>创建人</th>
             <th>合同状态</th>
         </tr>
@@ -41,6 +42,7 @@
                     <td align="right">{{ agree.agree_balance }}</td>
                 {% endif %}
                 {#                <td>{{ agree.lending }}</td>#}
+                <td>{{ agree.agree_date }}</td>
                 <td>{{ agree.agree_buildor.name }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
             </tr>
