--- a/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
@@ -6,6 +6,9 @@
         客户类型：{{ custom_obj.get_genre_display }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        婚姻状况：{{ custom_obj.person_custome.get_marital_status_display }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         授信总额：{{ custom_obj.credit_amount }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
