--- a/A_dbms/templates/dbms/report/summary/balance.html
+++ b/A_dbms/templates/dbms/report/summary/balance.html
@@ -4,7 +4,7 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_provide_list_all' %}">
             在保项目明细表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_balance_class' class_typ=1 %}">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_balance_class' c_typ=1 %}">
             在保项目分类（按放款）</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_article_class' class_typ=21 %}">
@@ -16,7 +16,7 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="#">
             项目明细表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_accrual_class' class_typ=1 %}">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_accrual_class' c_typ=1 %}">
             项目分类统计表（按放款）</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="#">
