--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-p-edit.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-p-edit.html
@@ -9,5 +9,15 @@
         <div class="col-sm-9">{{ form_custom_p_add.license_addr }}</div>
         <label id="e_license_addr" class="pull-right">{{ form_custom_p_add.license_addr.errors }}</label>
     </div>
+    <div class="form-group"><!--身份证地址-->
+        <label for="id_license_addrr" class="col-sm-3 control-label">{{ form_custom_p_add.license_addr.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_p_add.license_addr }}</div>
+        <label id="e_license_addr" class="pull-right">{{ form_custom_p_add.license_addr.errors }}</label>
+    </div>
+    <div class="form-group"><!--婚姻状况-->
+        <label for="id_marital_status" class="col-sm-3 control-label">{{ form_custom_p_add.marital_status.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_p_add.marital_status }}</div>
+        <label id="e_marital_status" class="pull-right">{{ form_custom_p_add.marital_status.errors }}</label>
+    </div>
 </div>
 
