--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-summry.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-summry.html
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <label>合同情况</label>
         <label class="navbar-right">
+            <a class="btn btn-primary btn-sm " id="signAllB">一键签合同</a>
             <a class="btn btn-primary btn-sm " id="addAscertainB">风控落实</a>
             <a class="btn btn-primary btn-sm " id="addNotifyB">放款通知</a>
         </label>
