--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -6,6 +6,7 @@
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/provide/agree/scan/provide-agree-summry.html' %}
         {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}
+        {% include 'dbms/provide/modl/sign-all-mod.html' %}
         {% include 'dbms/provide/modl/notify-add-mod.html' %}
         {% include 'dbms/provide/modl/notify-del-mod.html' %}
         {% include 'dbms/provide/modl/ascertain-add-mod.html' %}
@@ -14,6 +15,7 @@
 {% endblock %}
 
 {% block extra-js %}
+    {% include 'dbms/provide/extra/js-sign-all.html' %}
     {% include 'dbms/provide/extra/js-notify-add.html' %}
     {% include 'dbms/provide/extra/js-notify-del.html' %}
     {% include 'dbms/provide/extra/js-ascertain-add.html' %}
